fix: downgrade java version to 17 for JDK17 compatibility